# python-restaurant-api

./: .env  .flake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  makefile  pyproject.toml
cmd/http/: server.py
internal/common/: response_formatter.py  response_schema.py
internal/common/mapper/: __init__.py  mapper.py
internal/controllers/: controllers.py  menucontroller.py  usercontroller.py
internal/controllers/menu/: menu_controller.py  menu_params.py  menu_schema.py  menu_swagger.py  menucontroller.py
internal/controllers/user/: usercontroller.py
internal/core/domain/: menu.py  user.py
internal/core/interfaces/: repo_interface.py
internal/core/usecases/create_menu_command/: create_menu_cmd.py
internal/core/usecases/get_menu_command/: get_menu_cmd.py
internal/core/usecases/inactivate_menu_command/: inactivate_menu_cmd.py
internal/core/usecases/list_menu_command/: list_menu_cmd.py
internal/core/usecases/menu/: __init__.py  (+5 more)
internal/database/: core_connection.py
internal/envs/: __init__.py  envs.py
internal/errors/: error_handler.py  error_swagger.py  http_bad_request.py  http_not_found.py
internal/repositories/: base_repo.py  baserepo.py  menu_repo.py  menurepo.py  repositories.py  user_repo.py  userrepo.py
internal/repositories/menu/: menu_repo.py
internal/routes/: menurouter.py  router.py  userrouter.py
internal/routes/home/: homeRouter.py
internal/routes/menu/: menu_router.py  menu_schema.py  menurouter.py
internal/routes/user/: user_router.py  userrouter.py
pkg/json/: main.py
pkg/loggers/: main.py
(+1 files in other folders)
